# four-dimensional-pong

./: Cargo.toml  README.md
assets/: four-dimensional-pong-stripped.gltf  four-dimensional-pong.glb  four-dimensional-pong.gltf  pong.glb  working-four-dimensional-pong.glb
src/: main.rs
src/pong/: assets.rs  axis.rs  components.rs  constants.rs  mod.rs  player.rs  pong.rs  resources.rs  rotations.rs  transform.rs  ui.rs
